--- a/views/layout.mustache
+++ b/views/layout.mustache
@@ -22,5 +22,7 @@
     </div>
 
     <script src="/assets/application.js"></script>
+    <script type="text/javascript">function googleTranslateElementInit() {new google.translate.TranslateElement({pageLanguage: 'de'});}</script>
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   </body>
 </html>
