Update to the new version of the styleguide

--- a/views/partials/nav.mustache
+++ b/views/partials/nav.mustache
@@ -24,6 +24,9 @@
                         Kunde öffnen
                     </a>
                 </li>
+                <li>
+                  <div id="google_translate_element"></div>
+                </li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
